--- a/estilos.css
+++ b/estilos.css
@@ -11,27 +11,72 @@
     
     body{
     
-    background-image: url("beautiful-nature-g462e68833_1280.jpg.jpg");
+    background-image: url("books-g84259ff87_1280.jpg");
     
     background-repeat: no-repeat;
-    
+    background-size: cover;
     }
     
-    .fondomatematicas{
+    .fondoingles2{
     
-        background-image: url("books-g84259ff87_1280.jpg");
+        background-image: url("estatua.jpeg");
         
         background-repeat: no-repeat;
+        background-size: cover;
         
         }
     
-        .fondobiologia{
     
-            background-image: url("descarga.jfif");
+        .fondobiologia2{
+    
+            background-image: url("oceano.jpeg");
             
             background-repeat: no-repeat;
             background-size: cover;
+
+        }
+
+        .fondomatematicas2{
+    
+            background-image: url("muchachas.jpeg");
+            
+            background-repeat: no-repeat;
+            background-size: cover;
+            
             }
+        
+            .fondosociales2{
+    
+                background-image: url("nocheestrellada.jpeg");
+                
+                background-repeat: no-repeat;
+                background-size: cover;
+                
+                }
+
+  .fondotecnologia2{
+    
+                background-image: url("tortuga.jpeg");
+                
+                background-repeat: no-repeat;
+                background-size: cover;
+                
+                }
+
+
+                
+                .fondorelijion2{
+    
+                    background-image: url("religion.jpeg");
+                    
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    
+                    }
+
+
+        
+
     .img{
     
     position: relative;
@@ -50,13 +95,13 @@
     
     left: 180px;
     
-    background-image: url("heart-g8ac1554a2_1280.jpg.jpg");
+    background-image: url("medellin.jpeg");
     
     }
     
     .contenedor{
     
-     
+     background: image();
     
     height: 230px;
     
@@ -75,4 +120,53 @@
      
     
     }
-    
+
+    .contenido{
+
+        height: 280px;
+        
+        width: 100%;
+        
+        position: absolute;
+        
+        top: 410px;
+        
+         
+        
+        }
+        
+         
+        
+        .imagensociales2{
+        
+         
+        
+        background-repeat: no-repeat;
+        
+        float:left;
+        
+        height: 200px;
+        
+        width: 260px;
+        
+        margin-left: 5px;
+        
+        margin-right:5px;
+        
+        background-image: url("francia.jfif");
+        
+        }
+        
+        
+        
+        .textosociales{
+        
+        text-align: justify;
+        
+        color: azure;
+        
+        font-size: 20px;
+        
+        
+        
+        }
