--- a/botones.css
+++ b/botones.css
@@ -6,13 +6,14 @@ ul, ol{
     list-style: none;
 }
 .botones li a{
-    background-color: rgb(5, 247, 247);
-    color: rgb(0, 0, 0);
+    background-color: rgb(29, 23, 126);
+    color: rgb(255, 248, 248);
     text-decoration: none;
     padding: 10px 10px;
     display: block;
 }
 .menu{
+    color: azure;
     margin: auto;
     width: 800px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
